<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authViewModel"
            type="com.nakano.stampcardmvvm.viewModel.AuthViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_mail_address1"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mail_address_current"
                android:visibility="gone" />

            <TextView
                android:id="@+id/current_mail_address2"
                style="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/explanation"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/explanation_of_resetting"
                android:visibility="gone" />

            <TextView
                android:id="@+id/mail_address"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/field_email"
                android:text="@string/mail_address" />

            <EditText
                android:id="@+id/field_email"
                style="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/password"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/field_password"
                android:text="@string/password" />

            <EditText
                android:id="@+id/field_password"
                style="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_button"
                style="@style/TextAppearance.MdcTypographyStyles.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/login"
                android:textColor="@color/primary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/forgot_password"
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password" />

                <TextView
                    android:id="@+id/new_registration"
                    style="@style/TextAppearance.MdcTypographyStyles.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:text="@string/new_registration" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>
</layout>