<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <data>

        <variable
            name="stampCardViewModel"
            type="com.nakano.stampcardmvvm.viewModel.StampCardViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/flame_style_google_login"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_google" />

            <TextView
                android:id="@+id/login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/login_google" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/flame_style_twitter_login"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_twitter" />

            <TextView
                android:id="@+id/login_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/flame_style_twitter_login"
                android:padding="20dp"
                android:text="@string/login_twitter"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/flame_style_facebook_login"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_facebook" />

            <TextView
                android:id="@+id/login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/flame_style_facebook_login"
                android:padding="20dp"
                android:text="@string/login_facebook"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/flame_style_other_login"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_mail" />

            <TextView
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/flame_style_other_login"
                android:padding="20dp"
                android:text="@string/login_email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/flame_style_other_login"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_phone" />

            <TextView
                android:id="@+id/login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/flame_style_other_login"
                android:padding="20dp"
                android:text="@string/login_phone_number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/flame_style_other_login"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_anonymous" />

            <TextView
                android:id="@+id/login_anonymous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/flame_style_other_login"
                android:padding="20dp"
                android:text="@string/login_anonymous" />
        </LinearLayout>

    </LinearLayout>
</layout>